k8s/flag-service/flag-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flag-service-svc
 
spec:
  selector:
    app: auth-service
  ports:
  - port: 8001
    targetPort: 8001
    protocol: TCP
