k8s/flag-service/flag-service-gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: flag-service-gateway
 
spec:
  gatewayClassName: nginx
  listeners:
  - name: http-flag-service-8002
    protocol: HTTP
    port: 8002
    allowedRoutes:
      namespaces:
        from: Same
