k8s/flag-service/flag-service-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flag-service-httproute
 
spec:
  parentRefs:
    - name: flag-service-gateway
      sectionName: http-flag-service-8002
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: flag-service-svc
          port: 8002
